# Lightwatch

./: .gitignore  README.md
MainFirmware/: LightwatchCDriver.cpp  LightwatchCDriver.h  MainFirmware.ino  config.h
PinGUIn/libpinguin/: .gitignore  Cargo.toml
PinGUIn/libpinguin/src/: lib.rs  tests.rs
PinGUIn/libpinguin/src/common/: mod.rs  rect.rs  to_qtree_region.rs  types.rs
PinGUIn/libpinguin/src/elements/: button.rs  gui_element.rs  label.rs  mod.rs
PinGUIn/libpinguin/src/geospatial_fastindex/: geospatial_fastindex.rs  mod.rs  tests.rs
PinGUIn/libpinguin/src/rendering/: font_renderer.rs  gui_canvas.rs  mod.rs
PinGUIn/libpinguin/src/utils/: mod.rs  print.rs
PinGUIn/quadtree/: Cargo.toml
PinGUIn/quadtree/src/: area.rs  entry.rs  handle_iter.rs  iter.rs  lib.rs  point.rs  qtinner.rs  traversal.rs  types.rs
PinGUIn/test2/: Cargo.toml
PinGUIn/test2/src/: main.rs
RustNN.orig/: Cargo.toml  LICENSE-APACHE
RustNN.orig/src/: lib.rs
RustNN.orig/tests/: inplace.rs
RustNN/src/: lib.rs
RustNN/tests/: xor.rs
extras/: esp32_arduino_board_watch.patch
extras/accel_data_science/: .gitignore  requirements.txt  skipping_rope.ipynb
extras/accel_data_science/data/: skipping_rope_left_arm_peter.txt
extras/accel_data_science/utils/: accel_data.py
extras/backplate/: backplate.scad
extras/docker/: dev-env.Dockerfile  esp32_arduino_board_watch.patch  lw  rust-xtensa.Dockerfile
rust_blob_library/: .gitignore  library.properties  make_bindings
rust_blob_library/src/: lightwatch_rust_blob.h
rust_firmware/: Cargo.toml  compile_blob  make_bindings  setenv
rust_firmware/src/: c_bindings.rs  energy_manager.rs  lib.rs  libc_alloc.rs  loop_time.rs  memory_logging_shortcut.rs  non_official_c_bindings.rs  serial_logger.rs  touch_event.rs
rust_firmware/src/gui/: button.rs  event_checks.rs  gui_renderer.rs  gui_widget.rs  label.rs  mod.rs  scroll_list.rs  tap.rs  touch_event.rs
rust_firmware/src/input/: button.rs  mod.rs  touch.rs
rust_firmware/src/pinguin_renderer/: mod.rs  pinguin_renderer.rs
rust_firmware/src/system_applications/: activity.rs  activity.rs.bak  empty.rs  home.rs  mod.rs  system_application.rs
rust_firmware/src/system_applications/activity/: mod.rs
rust_firmware/src/system_applications/activity/detectors/: detector.rs  mod.rs  skipping_rope.rs
rust_firmware/src/system_applications/lucid_dreaming/: mod.rs
rust_firmware/src/system_applications/pinguin_test/: mod.rs
rust_firmware/src/utils/: accel_extensions.rs  loop_delay.rs  loop_time.rs  memory_logging_shortcut.rs  mod.rs  serial_logger.rs
rust_firmware/src/utils/input/: mod.rs  shake_detector.rs
shapelearn/: Cargo.toml
shapelearn/src/: lib.rs  model.rs  tests.rs
shapelearn/src/utils/: mod.rs
