[package]
name = "shapelearn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nn = "0.1.6"
libc-print = { version = "0.1.16", optional = true }

[features]
default = ["print-stdout"]
print-stdout = ["libc-print"]