[package]
name = "shapelearn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nn = { git = "https://github.com/peterwilli/RustNN.git", branch="no-std-compat" }
libc-print = { version = "0.1.16", optional = true }
log = "0.4.14"
rune = "0.9.1"

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = ["print-stdout"]
print-stdout = ["libc-print"]
