[package]
name = "PinGUIn"
version = "0.1.0"
authors = ["Peter Willemsen <peter@codebuffet.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quadtree_rs = "0.1.2"
no-std-compat = { version = "0.4.1", features = [ "alloc", "compat_sync" ] }
libc-print = "0.1.16"

[dependencies.num]
version = "0.4"
default-features = false
