[package]
name = "libpinguin"
version = "0.1.0"
authors = ["Peter Willemsen <peter@codebuffet.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc-print = { version = "0.1.16", optional = true }
no-std-compat = { version = "0.4.1", features = [ "alloc", "compat_sync", "compat_hash" ] }

[dev-dependencies]
image = "0.23.14"

[features]
default = ["print-stdout"]
print-stdout = ["libc-print"]

[dependencies.num]
version = "0.4"
default-features = false
